# lapack

./: CMakeLists.txt  meson.build
BLAS/: CMakeLists.txt
BLAS/SRC/: CMakeLists.txt
SRC/: CMakeLists.txt
